# Software-Composition-Analysis

./: README.md  app-new.py  app.py  dependency_tree  details  hello.py  requirements.txt  sample.txt  scan_history.json  vulnerability_mapping.json
__MACOSX/: ._app.py  ._install.py  ._newpair.pem
__MACOSX/testing/: ._image.tar
local_packages/: CMakeLists.txt  pom.xml
modules/: dast_scanner.py  dependency.py  history.py  sast_scanner.py  vulnerability.py
uploads/: sample.txt
uploads/6f000d25-e40d-4172-8590-a1d97b9525cb/local_packages/chardet-3.0.4.dist-info/: RECORD
uploads/8187d28b-fa50-4598-8d85-efb4d95d6f41/local_packages/Flask-2.1.0.dist-info/: RECORD
